Update to Quarkus 2.1.1